--- a/CinePicker/Common/Components/HeaderWithTagsUIView.xib
+++ b/CinePicker/Common/Components/HeaderWithTagsUIView.xib
@@ -19,13 +19,13 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZt-KC-F9T">
-                            <rect key="frame" x="24" y="9.5" width="57.5" height="21"/>
+                            <rect key="frame" x="16" y="0.5" width="57.5" height="21"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U22-VJ-wzl" userLabel="Will Check It Out LGButton" customClass="LGButton" customModule="LGButton">
-                            <rect key="frame" x="257" y="5" width="42" height="30"/>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U22-VJ-wzl" userLabel="Will Check It Out LGButton" customClass="LGButton" customModule="LGButton">
+                            <rect key="frame" x="265" y="-4.5" width="42" height="30"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="fullyRoundedCorners" value="YES"/>
                                 <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
@@ -39,8 +39,8 @@
                                 <action selector="onWillCheckItOutLGButtonTouchUpInside:" destination="EqA-6N-dTf" eventType="touchUpInside" id="rUL-fr-2vd"/>
                             </connections>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X6t-c1-F1S" userLabel="I like it LGButton" customClass="LGButton" customModule="LGButton">
-                            <rect key="frame" x="307" y="5" width="44" height="30"/>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X6t-c1-F1S" userLabel="I like it LGButton" customClass="LGButton" customModule="LGButton">
+                            <rect key="frame" x="315" y="-4.5" width="44" height="30"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="fullyRoundedCorners" value="YES"/>
                                 <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
@@ -62,14 +62,14 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="X6t-c1-F1S" firstAttribute="centerY" secondItem="jHL-Jy-dPy" secondAttribute="centerY" id="1kj-CE-XlY"/>
-                        <constraint firstAttribute="trailing" secondItem="X6t-c1-F1S" secondAttribute="trailing" constant="24" id="3Hm-5J-fBb"/>
+                        <constraint firstAttribute="trailing" secondItem="X6t-c1-F1S" secondAttribute="trailing" constant="16" id="3Hm-5J-fBb"/>
                         <constraint firstItem="X6t-c1-F1S" firstAttribute="leading" secondItem="U22-VJ-wzl" secondAttribute="trailing" constant="8" id="4jg-d0-6wM"/>
-                        <constraint firstItem="U22-VJ-wzl" firstAttribute="centerY" secondItem="jHL-Jy-dPy" secondAttribute="centerY" id="5Uy-iu-YVA"/>
-                        <constraint firstItem="dZt-KC-F9T" firstAttribute="leading" secondItem="jHL-Jy-dPy" secondAttribute="leading" constant="24" id="6b3-Js-Ek8"/>
+                        <constraint firstItem="dZt-KC-F9T" firstAttribute="leading" secondItem="jHL-Jy-dPy" secondAttribute="leading" constant="16" id="6b3-Js-Ek8"/>
+                        <constraint firstItem="jxA-wR-KXF" firstAttribute="top" secondItem="X6t-c1-F1S" secondAttribute="bottom" constant="14" id="Jbp-6M-MxO"/>
                         <constraint firstAttribute="bottom" secondItem="jxA-wR-KXF" secondAttribute="bottom" id="j2D-Hc-S99"/>
+                        <constraint firstItem="jxA-wR-KXF" firstAttribute="top" secondItem="dZt-KC-F9T" secondAttribute="bottom" constant="18" id="nz1-Xb-5bt"/>
                         <constraint firstItem="jxA-wR-KXF" firstAttribute="leading" secondItem="jHL-Jy-dPy" secondAttribute="leading" id="uGl-Bz-fvT"/>
-                        <constraint firstItem="dZt-KC-F9T" firstAttribute="centerY" secondItem="jHL-Jy-dPy" secondAttribute="centerY" id="yMr-8n-SXv"/>
+                        <constraint firstItem="jxA-wR-KXF" firstAttribute="top" secondItem="U22-VJ-wzl" secondAttribute="bottom" constant="14" id="waQ-mr-rry"/>
                         <constraint firstAttribute="trailing" secondItem="jxA-wR-KXF" secondAttribute="trailing" id="zsf-6Y-hVB"/>
                     </constraints>
                 </view>
