--- a/CinePicker/Common/Components/HeaderTableViewCell.xib
+++ b/CinePicker/Common/Components/HeaderTableViewCell.xib
@@ -12,30 +12,57 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="BCV-1O-5Ld" customClass="HeaderTableViewCell" customModule="CinePicker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q22-kA-PTR" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                     <subviews>
                         <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUf-o0-zTd">
-                            <rect key="frame" x="155.5" y="2" width="64" height="36"/>
+                            <rect key="frame" x="155.5" y="7" width="64" height="36"/>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <state key="normal" title="Header">
                                 <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gDd-0w-zxx" userLabel="Bottom Bar View">
-                            <rect key="frame" x="0.0" y="39.5" width="375" height="0.5"/>
+                            <rect key="frame" x="0.0" y="49.5" width="375" height="0.5"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="lmT-Cu-UmT"/>
                             </constraints>
                         </view>
+                        <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V3o-9Y-SZr" customClass="LGButton" customModule="LGButton">
+                            <rect key="frame" x="341" y="15" width="10" height="20"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                    <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="string" keyPath="rightIconFontName" value="fa"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="rightIconString" value="angle-right"/>
+                                <userDefinedRuntimeAttribute type="number" keyPath="spacingTop">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="spacingBottom">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="spacingLeading">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="spacingTrailing">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="rightIconFontSize">
+                                    <real key="value" value="20"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="V3o-9Y-SZr" firstAttribute="centerY" secondItem="Q22-kA-PTR" secondAttribute="centerY" id="APK-iF-z3e"/>
                         <constraint firstAttribute="bottom" secondItem="gDd-0w-zxx" secondAttribute="bottom" id="R9G-km-ejO"/>
                         <constraint firstItem="iUf-o0-zTd" firstAttribute="centerX" secondItem="Q22-kA-PTR" secondAttribute="centerX" id="cTP-vv-sLh"/>
                         <constraint firstAttribute="trailing" secondItem="gDd-0w-zxx" secondAttribute="trailing" id="u7M-Ou-nI3"/>
+                        <constraint firstAttribute="trailing" secondItem="V3o-9Y-SZr" secondAttribute="trailing" constant="24" id="vZB-UR-ccF"/>
                         <constraint firstItem="gDd-0w-zxx" firstAttribute="leading" secondItem="Q22-kA-PTR" secondAttribute="leading" id="xF0-X4-m5R"/>
                         <constraint firstItem="iUf-o0-zTd" firstAttribute="centerY" secondItem="Q22-kA-PTR" secondAttribute="centerY" id="yx3-QN-QJv"/>
                     </constraints>
@@ -55,6 +82,7 @@
                 <outlet property="bottomBarView" destination="gDd-0w-zxx" id="170-h7-Rle"/>
                 <outlet property="contentUIView" destination="Q22-kA-PTR" id="VoG-zM-aQM"/>
                 <outlet property="headerButton" destination="iUf-o0-zTd" id="2Jp-bE-9OW"/>
+                <outlet property="rightArrowLGButton" destination="V3o-9Y-SZr" id="zTJ-Rc-Upe"/>
             </connections>
             <point key="canvasLocation" x="-90.400000000000006" y="234.78260869565219"/>
         </view>
