--- a/CinePicker/Common/Components/MovieCollectionTableViewCell.xib
+++ b/CinePicker/Common/Components/MovieCollectionTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="107" id="KGk-i7-Jjw" customClass="MovieCollectionTableViewCell" customModule="CinePicker" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="158" id="KGk-i7-Jjw" customClass="MovieCollectionTableViewCell" customModule="CinePicker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ngY-H8-D1r">
-                        <rect key="frame" x="0.0" y="33" width="375" height="126.5"/>
+                        <rect key="frame" x="0.0" y="33.5" width="375" height="124"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="77S-Ig-UGa">
                             <size key="itemSize" width="95" height="120"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -32,8 +32,8 @@
                         </connections>
                     </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3T2-GH-vj6">
-                        <rect key="frame" x="16" y="12" width="57.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <rect key="frame" x="16" y="12" width="59.5" height="21.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -45,7 +45,7 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ngY-H8-D1r" secondAttribute="bottom" id="2yx-GV-WGw"/>
+                    <constraint firstAttribute="bottom" secondItem="ngY-H8-D1r" secondAttribute="bottom" constant="2" id="2yx-GV-WGw"/>
                     <constraint firstAttribute="trailing" secondItem="ngY-H8-D1r" secondAttribute="trailing" id="9iO-uM-QFM"/>
                     <constraint firstItem="ihH-r5-Yca" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Cow-3u-7bE"/>
                     <constraint firstItem="ngY-H8-D1r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="K2p-en-Hsa"/>
